docs/pages/versions/v53.0.0/sdk/audio.mdx
---
title: 音频 (expo-audio)
description: 一个提供用于在应用中实现音频播放和录制的 API 的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-53/packages/expo-audio'
packageName: 'expo-audio'
iconUrl: '/static/images/packages/expo-av.png'
platforms: ['android', 'ios', 'web', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ConfigPluginExample, ConfigPluginProperties } from '~/ui/components/ConfigSection';
import { SnackInline } from '~/ui/components/Snippet';
import { PlatformTags } from '~/ui/components/Tag/PlatformTags';

`expo-audio` 是一个跨平台音频库，用于访问设备的原生音频能力。

请注意，如果耳机/蓝牙音频设备断开连接，音频会自动停止。

## 安装

<APIInstallSection />

## 在 app 配置中进行配置

如果你在项目中使用配置插件（[Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)），你可以使用 `expo-audio` 内置的 [config plugin](/config-plugins/introduction/) 来进行配置。该插件允许你配置各种无法在运行时设置、且需要构建新的应用二进制文件后才会生效的属性。如果你的应用**不**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-audio",
        {
          "microphonePermission": "允许 $(PRODUCT_NAME) 访问你的麦克风。"
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'microphonePermission',
      platform: 'ios',
      description: '用于设置 `NSMicrophoneUsageDescription` 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的麦克风"',
    },
  ]}
/>

## 使用

### 播放声音

<SnackInline
  label='Playing sounds'
  dependencies={['expo-audio', 'expo-asset']}
  files={{
    'assets/Hello.mp3': 'https://snack-code-uploads.s3.us-west-1.amazonaws.com/~asset/c9c43b458d6daa9771a7287cae9f5b47'
  }}
>

```jsx
import { View, StyleSheet, Button } from 'react-native';
import { useAudioPlayer } from 'expo-audio';

const audioSource = require('./assets/Hello.mp3');

export default function App() {
  const player = useAudioPlayer(audioSource);

  return (
    <View style={styles.container}>
      <Button title="播放声音" onPress={() => player.play()} />
      <Button
        title="重新播放声音"
        onPress={() => {
          player.seekTo(0);
          player.play();
        }}
      />
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
    backgroundColor: '#ecf0f1',
    padding: 10,
  },
});
```

</SnackInline>

> **信息** **注意：** 如果你是从 [`expo-av`](av.mdx) 迁移过来的，你会注意到 `expo-audio` 在音频结束时不会自动重置播放位置。执行 [`play()`](#play) 后，播放器会在声音末尾保持暂停状态。要再次播放，请调用 [`seekTo(seconds)`](#seektoseconds) 来重置位置——如上面的示例所示。

### 录制声音

<SnackInline label='录制声音' dependencies={['expo-audio', 'expo-asset']}>

```jsx
import { useState, useEffect } from 'react';
import { View, StyleSheet, Button } from 'react-native';
import {
  useAudioRecorder,
  AudioModule,
  RecordingPresets,
  setAudioModeAsync,
  useAudioRecorderState,
} from 'expo-audio';

export default function App() {
  const audioRecorder = useAudioRecorder(RecordingPresets.HIGH_QUALITY);
  const recorderState = useAudioRecorderState(audioRecorder);

  const record = async () => {
    await audioRecorder.prepareToRecordAsync();
    audioRecorder.record();
  };

  const stopRecording = async () => {
    // 录音文件将可在 `audioRecorder.uri` 中获取。
    await audioRecorder.stop();
  };

  useEffect(() => {
    (async () => {
      const status = await AudioModule.requestRecordingPermissionsAsync();
      if (!status.granted) {
        Alert.alert('麦克风访问权限被拒绝');
      }

      setAudioModeAsync({
        playsInSilentMode: true,
        allowsRecording: true,
      });
    })();
  }, []);

  return (
    <View style={styles.container}>
      <Button
        title={recorderState.isRecording ? '停止录音' : '开始录音'}
        onPress={recorderState.isRecording ? stopRecording : record}
      />
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
    backgroundColor: '#ecf0f1',
    padding: 10,
  },
});
```

</SnackInline>

### 在后台播放或录制音频&ensp;<PlatformTags platforms={['ios']} />

在 iOS 上，后台音频播放和录制仅适用于独立应用，并且需要额外配置。
在 iOS 上，每个后台功能都需要在你的 **Info.plist** 文件中的 `UIBackgroundModes` 数组里添加一个特殊键。
在独立应用中，这个数组默认是空的，因此要使用后台功能，你需要在你的 **app.json** 配置中添加相应的键。

以下是启用后台音频播放的 **app.json** 示例：

```json
{
  "expo": {
    ...
    "ios": {
      ...
      "infoPlist": {
        ...
        "UIBackgroundModes": [
          "audio"
        ]
      }
    }
  }
}
```

### 直接使用 AudioPlayer

在大多数情况下，应使用 [`useAudioPlayer`](#useaudioplayersource-updateinterval) 钩子来创建 `AudioPlayer` 实例。它会管理播放器的生命周期，并确保在组件卸载时正确释放。然而，在某些高级用例中，可能需要创建一个在组件卸载时不会自动销毁的 `AudioPlayer`。
在这种情况下，可以使用 [`createAudioPlayer`](#audiocreateaudioplayersource-updateinterval) 函数来创建 `AudioPlayer`。你需要了解这种方式带来的风险，因为当播放器不再需要时，调用 [`release()`](../sdk/expo/#release) 方法是你的责任。如果处理不当，这种方式可能会导致内存泄漏。

```tsx
import { createAudioPlayer } from 'expo-audio';
const player = createAudioPlayer(audioSource);
```

### Web 使用说明

- Chrome 上的一个 MediaRecorder 问题会生成缺少时长元数据的 WebM 文件。[查看未解决的 Chromium 问题](https://bugs.chromium.org/p/chromium/issues/detail?id=642012)。
- MediaRecorder 的编码选项和其他配置在不同浏览器之间并不一致，在你的应用中使用 [kbumsik/opus-media-recorder](https://github.com/kbumsik/opus-media-recorder) 或 [ai/audio-recorder-polyfill](https://github.com/ai/audio-recorder-polyfill) 等 Polyfill 会改善你的体验。传递给 `prepareToRecordAsync` 的任何选项都会直接传递给 MediaRecorder API，因此也会传递给 Polyfill。
- Web 浏览器要求网站通过安全方式提供服务，以便它们监听麦克风。有关更多细节，请参见 [MediaDevices `getUserMedia()` security](https://developer.mozilla.org/en-US/docs/Web/API/MediaDevices/getUserMedia#security)。

## API

```js
import { useAudioPlayer, useAudioRecorder } from 'expo-audio';
```

<APISection packageName="expo-audio" apiName="Audio" />
